docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-executor-version-1-0-quantum-program-model.mdx
---
title: QuantumProgramModel (v0.47)
description: API reference for ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel in qiskit-ibm-runtime v0.47
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel
---

<span id="ibm-quantum-schemas-executor-version-1-0-quantumprogrammodel" />

# QuantumProgramModel

<Class id="ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel" isDedicatedPage={true} github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.7.20260419/ibm_quantum_schemas/executor/version_1_0/models.py#L158-L222" signature="QuantumProgramModel" modifiers="pydantic model">
  Bases: `BaseModel`

  Model to store a quantum program.

  ### circuits

  <Attribute id="ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel.circuits" attributeTypeHint="QpyDataV13ToV17Model[QuantumCircuit] [Required]" modifiers="field">
    One quantum circuit for every element of `items`.

    These are stored outside of `items` to cosituate them inside of one QPY blob.

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
    *   `check_circuit_count_is_consistent`
  </Attribute>

  ### items

  <Attribute id="ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel.items" attributeTypeHint="list[Annotated[CircuitItemModel | SamplexItemModel, Field(discriminator" attributeValue="'item_type')]] [Required]" modifiers="field">
    Items of the program.

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
    *   `check_circuit_count_is_consistent`
  </Attribute>

  ### meas\_level

  <Attribute id="ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel.meas_level" attributeTypeHint="Literal['classified', 'kerneled', 'avg_kerneled', 'both']" attributeValue="'classified'" modifiers="field">
    The level at which to return all classical register measurement results.

    This option sets the return type of all classical registers in all quantum program items and determines whether the raw complex data from low-level measurement devices is discriminated into bits or not.

    > *   **“classified”: Classical register data is returned as boolean arrays with the intrinsic shape**
    >
    >     `(num_shots, creg_size)`.
    >
    > *   **“kerneled”: Classical register data is returned as a complex array with the intrinsic shape**
    >
    >     `(num_shots, creg_size)`, where each entry represents an IQ data point (resulting from kerneling the measurement trace) in arbitrary units.
    >
    > *   **“avg\_kerneled”: Classical register data is returned as a complex array with the intrinsic**
    >
    >     shape `(creg_size,)`, where data is equivalent to “kerneled” except additionally averaged over shots.
    >
    > *   “both”: Both classified and kerneled data is returned for every classical register.

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
    *   `check_circuit_count_is_consistent`
  </Attribute>

  ### passthrough\_data

  <Attribute id="ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel.passthrough_data" attributeTypeHint="DataTree" attributeValue="None" modifiers="field">
    Arbitrary nested data passed through execution without modification.

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
    *   `check_circuit_count_is_consistent`
  </Attribute>

  ### semantic\_role

  <Attribute id="ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel.semantic_role" attributeTypeHint="str | None" attributeValue="None" modifiers="field">
    Semantic role indicating how execution results may be post-processed by runtime clients.

    Reserved system values include ‘sampler-v2’ and ‘estimator-v2’, and are subject to change without notice. Third party clients should not set or depend on this value.

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
    *   `check_circuit_count_is_consistent`
  </Attribute>

  ### shots

  <Attribute id="ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel.shots" attributeTypeHint="int [Required]" modifiers="field">
    The number of shots for each individually bound circuit.

    **Constraints**

    *   **ge** = 1

    **Validated by**

    *   `check_chunk_sizes_are_consistent`
    *   `check_circuit_count_is_consistent`
  </Attribute>

  ### check\_chunk\_sizes\_are\_consistent

  <Function id="ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel.check_chunk_sizes_are_consistent" github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.7.20260419/ibm_quantum_schemas/executor/version_1_0/models.py#L180-L190" signature="check_chunk_sizes_are_consistent" modifiers="validator">
    Check that all program items set chunk sizes consistently.
  </Function>

  ### check\_circuit\_count\_is\_consistent

  <Function id="ibm_quantum_schemas.executor.version_1_0.QuantumProgramModel.check_circuit_count_is_consistent" github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.7.20260419/ibm_quantum_schemas/executor/version_1_0/models.py#L192-L201" signature="check_circuit_count_is_consistent" modifiers="validator">
    Check that there is one circuit for every item.
  </Function>
</Class>

